--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
 
             <div class="right">
-                <p>Current diffculty:<span class="current">4BSURD
+                <p>Current diffculty:<span class="current">Shizophrenic
                 </span>
                 </p>
             </div>
