--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                 background-color: rgb(20, 20, 20);
             }
 
+
+            <!--no secrets there just redstone-->
+
             .Head{
                 height: 90px;
                 font-family: Ghastly Panic;
