--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         
         <title>Core</title>
+        <!--no secrets there! only redstone.-->
         <style>
             .body{
                 
@@ -12,7 +13,6 @@
             }
 
 
-            <!--no secrets there just redstone-->
 
             .Head{
                 height: 90px;
